--- a/src/components/Botones.astro
+++ b/src/components/Botones.astro
@@ -1,11 +1,10 @@
 ---
 interface Props{
     text: string
-    text2: string
-    text3: string
+ 
 }
 
-const {text, text2, text3} = Astro.props
+const {text} = Astro.props
 ---
 
 <div class="botones">
