--- a/src/components/ModificarInfo.astro
+++ b/src/components/ModificarInfo.astro
@@ -28,9 +28,7 @@ import Botones from "../components/Botones.astro"
 
             
             <Botones 
-                text="Guardar" 
-                text2="Regresar" 
-                text3="/investigador">
+                text="Guardar" >
             </Botones>
             
         </form>
