enlaces de prueba

--- a/src/layouts/Nav.astro
+++ b/src/layouts/Nav.astro
@@ -13,7 +13,7 @@ const { text, text2, text3, text4} = Astro.props;
 
     <ul>
         <li><a href="/"><i class="fa-solid fa-house" style="color: #000000;"></i>{text}</a></li>
-        <li><a href="/galeria"><i class="fa-solid fa-image" style="color: #000000;"></i>{text2}</a></li>
+        <li><a href="https://www.facebook.com"><i class="fa-solid fa-image" style="color: #000000;"></i>{text2}</a></li>
         <li><a href="/ambiente"><i class="fa-solid fa-seedling" style="color: #000000;"></i>{text4}</a></li>
         <li><a href="/proyectos"><i class="fa-solid fa-helmet-safety" style="color: #000000;"></i>{text3}</a></li>
     </ul>
