Resuelto conflicto de merge

--- a/src/layouts/Nav.astro
+++ b/src/layouts/Nav.astro
@@ -33,10 +33,10 @@ const { text, text2, text3, text4} = Astro.props;
         
         <div class="slide">
             <ul>
-                <li><a class="id" href="/"><i class="fa-solid fa-house" style="color: #000000;"></i> HOME</a></li>
-                <li><a class="id" href="/galeria"><i class="fa-solid fa-image" style="color: #000000;"></i> GALERIA </a></li>
-                <li><a class="id" href="/ambiente"><i class="fa-solid fa-seedling" style="color: #000000;"></i>AMBIENTE</a></li>
-                <li><a class="id" href="/proyectos"><i class="fa-solid fa-helmet-safety" style="color: #000000;"></i> NUESTRO PROYECTOS</a></li>
+                <li><a class="id" href="https://walstar29.github.io/Portal-Digital/"><i class="fa-solid fa-house" style="color: #000000;"></i> HOME</a></li>
+                <li><a class="id" href="https://walstar29.github.io/Portal-Digital/galeria/"><i class="fa-solid fa-image" style="color: #000000;"></i> GALERIA </a></li>
+                <li><a class="id" href="https://walstar29.github.io/Portal-Digital/ambiente"><i class="fa-solid fa-seedling" style="color: #000000;"></i>AMBIENTE</a></li>
+                <li><a class="id" href="https://walstar29.github.io/Portal-Digital/proyectos"><i class="fa-solid fa-helmet-safety" style="color: #000000;"></i> NUESTRO PROYECTOS</a></li>
             </ul>
         </div>
 </label>
