--- a/src/layouts/Nav.astro
+++ b/src/layouts/Nav.astro
@@ -12,10 +12,10 @@ const { text, text2, text3, text4} = Astro.props;
 <nav class="nav">
 
     <ul>
-        <li><a href="/"><i class="fa-solid fa-house" style="color: #000000;"></i>{text}</a></li>
-        <li><a href="https://www.facebook.com"><i class="fa-solid fa-image" style="color: #000000;"></i>{text2}</a></li>
-        <li><a href="/ambiente"><i class="fa-solid fa-seedling" style="color: #000000;"></i>{text4}</a></li>
-        <li><a href="/proyectos"><i class="fa-solid fa-helmet-safety" style="color: #000000;"></i>{text3}</a></li>
+        <li><a href="https://walstar29.github.io/Portal-Digital/"><i class="fa-solid fa-house" style="color: #000000;"></i>{text}</a></li>
+        <li><a href="https://walstar29.github.io/Portal-Digital/galeria/"><i class="fa-solid fa-image" style="color: #000000;"></i>{text2}</a></li>
+        <li><a href="https://walstar29.github.io/Portal-Digital/ambiente/"><i class="fa-solid fa-seedling" style="color: #000000;"></i>{text4}</a></li>
+        <li><a href="https://walstar29.github.io/Portal-Digital/proyectos/"><i class="fa-solid fa-helmet-safety" style="color: #000000;"></i>{text3}</a></li>
     </ul>
 
 </nav>
@@ -35,8 +35,8 @@ const { text, text2, text3, text4} = Astro.props;
             <ul>
                 <li><a class="id" href="https://walstar29.github.io/Portal-Digital/"><i class="fa-solid fa-house" style="color: #000000;"></i> HOME</a></li>
                 <li><a class="id" href="https://walstar29.github.io/Portal-Digital/galeria/"><i class="fa-solid fa-image" style="color: #000000;"></i> GALERIA </a></li>
-                <li><a class="id" href="https://walstar29.github.io/Portal-Digital/ambiente"><i class="fa-solid fa-seedling" style="color: #000000;"></i>AMBIENTE</a></li>
-                <li><a class="id" href="https://walstar29.github.io/Portal-Digital/proyectos"><i class="fa-solid fa-helmet-safety" style="color: #000000;"></i> NUESTRO PROYECTOS</a></li>
+                <li><a class="id" href="https://walstar29.github.io/Portal-Digital/ambiente/"><i class="fa-solid fa-seedling" style="color: #000000;"></i>AMBIENTE</a></li>
+                <li><a class="id" href="https://walstar29.github.io/Portal-Digital/proyectos/"><i class="fa-solid fa-helmet-safety" style="color: #000000;"></i> NUESTRO PROYECTOS</a></li>
             </ul>
         </div>
 </label>
