Resuelto conflicto de merge

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ import Footer from "../layouts/Footer.astro";
 				<H1 title='Festividades y tradiciones'></H1>
 			</div>
 			<ContenedorInformacion subtitle='1) San Simón Apóstol:' contexto='Celebrado el 28 de octubre, es una de las festividades más importantes de la ciudad. Incluye misas, procesiones y actividades culturales.'>
-				<img src="/public/Festividades y Tradiciones/San Simon Apostol.jpg" alt="">
+				<img src="https://walstar29.github.io/Portal-Digital/public/FestividadesyTradiciones/SanSimonApostol.jpg" alt="">
 			</ContenedorInformacion>
 
 			<ContenedorInformacion subtitle='2) Nuestra Señora de Las Mercedes:' contexto='Celebrada el 24 de septiembre, es una de las festividades más importantes del municipio. La devoción a esta virgen fue introducida en la comunidad a principios del siglo XX.'>
