--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,11 +41,12 @@ import Footer from "../layouts/Footer.astro";
 				<H1 title='Festividades y tradiciones'></H1>
 			</div>
 			<ContenedorInformacion subtitle='1) San Simón Apóstol:' contexto='Celebrado el 28 de octubre, es una de las festividades más importantes de la ciudad. Incluye misas, procesiones y actividades culturales.'>
-				<img src="https://github.com/WalStar29/Portal-Digital/SanSimonApostol.jpg/" alt="San Simon Apostol">
+				<img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/FestividadesyTradiciones/SanSimonApostol.jpg" alt="San Simon Apostol">
+
 			</ContenedorInformacion>
 
 			<ContenedorInformacion subtitle='2) Nuestra Señora de Las Mercedes:' contexto='Celebrada el 24 de septiembre, es una de las festividades más importantes del municipio. La devoción a esta virgen fue introducida en la comunidad a principios del siglo XX.'>
-				<img src="https://th.bing.com/th/id/OIP.gi-qfTcsLk51whsq6R-I6gHaIw?rs=1&pid=ImgDetMain" alt="">
+				<img src="/public/Festividades y Tradiciones/Nuestra Señora de Las Mercedes.jpg" alt="">
 			</ContenedorInformacion>
 			
 			<ContenedorInformacion subtitle='3) Virgen del Carmen y Virgen del Valle:' contexto='Se realizan tradicionales paseos por el mar en honor a estas vírgenes, que son muy veneradas en la región.'>
