imagene index primera parta

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,19 +45,19 @@ import Footer from "../layouts/Footer.astro";
 			</ContenedorInformacion>
 
 			<ContenedorInformacion subtitle='2) Nuestra Señora de Las Mercedes:' contexto='Celebrada el 24 de septiembre, es una de las festividades más importantes del municipio. La devoción a esta virgen fue introducida en la comunidad a principios del siglo XX.'>
-				<img src="/public/Festividades y Tradiciones/Nuestra Señora de Las Mercedes.jpg" alt="">
+				<img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/FestividadesyTradiciones/NuestraSe%C3%B1oradeLasMercedes.jpg?raw=true" alt="">
 			</ContenedorInformacion>
 			
 			<ContenedorInformacion subtitle='3) Virgen del Carmen y Virgen del Valle:' contexto='Se realizan tradicionales paseos por el mar en honor a estas vírgenes, que son muy veneradas en la región.'>
-				<img src="/public/Festividades y Tradiciones/Virgen del Carmen y Virgen del Valle.jpg" alt="">
+				<img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/FestividadesyTradiciones/VirgendelCarmenyVirgendelValle.jpg?raw=true" alt="">
 			</ContenedorInformacion>
 			
 			<ContenedorInformacion subtitle='4) Misas de Aguinaldo:' contexto='Durante la época navideña, se celebran misas de aguinaldo, que son una serie de misas matutinas acompañadas de música y cantos tradicionales.'>
-				<img src="/public/Festividades y Tradiciones/Misas de Aguinaldo.jpg" alt="">
+				<img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/FestividadesyTradiciones/MisasdeAguinaldo.jpg?raw=true" alt="">
 			</ContenedorInformacion>
 
 			<ContenedorInformacion subtitle='5) Velorios de Cruz:' contexto='En el mes de mayo, se llevan a cabo los velorios de cruz, una tradición que incluye rezos, cantos y ofrendas florales en honor a la Santa Cruz'>
-				<img src="/public/Festividades y Tradiciones/Velorios de Cruz.jpg" alt="">
+				<img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/FestividadesyTradiciones/VeloriosdeCruz.jpg?raw=true" alt="">
 			</ContenedorInformacion>
 		</ContenedoresPadres>
 
@@ -68,11 +68,11 @@ import Footer from "../layouts/Footer.astro";
 				<H1 title='Actividades Culturales y Económicas'></H1>
 			</div>
 			<ContenedorInformacion subtitle='1) Pesca y Comercio Marítimo:' contexto='La pesca y el comercio marítimo son actividades económicas fundamentales en el municipio, debido a su ubicación costera que se encuentra la laguna de punta de piedras.'>
-				<img src="/public/Festividades y Tradiciones/Pesca y Comercio Marítimo.jpg" alt="">
+				<img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/FestividadesyTradiciones/PescayComercioMar%C3%ADtimo.jpg?raw=true" alt="">
 			</ContenedorInformacion>
 
 			<ContenedorInformacion subtitle='2) Turismo:' contexto='El municipio cuenta con atractivos turísticos como la Laguna de La Restinga, las ruinas de Cubagua y diversas playas, que atraen a visitantes tanto nacionales como internacionales.'>
-				<img src="/public/Festividades y Tradiciones/Turismo.jpg" alt="">
+				<img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/FestividadesyTradiciones/Turismo.jpg?raw=true" alt="">
 			</ContenedorInformacion>
 		</ContenedoresPadres>
 
