--- a/src/pages/galeria.astro
+++ b/src/pages/galeria.astro
@@ -18,50 +18,50 @@ import Footer from "../layouts/Footer.astro";
         <ContenedoresPadres>
             <H1 title='Area de fotografias'></H1>
             <div class="imagenes">
-                <img src="/public/IngenieriaSistemas/GrupoSISTEMAS.jpg" alt="">
-                <img src="/public/IngenieriaQuimica/GrupoQuimica.jpg" alt="">
-                <img src="/public/IngenieriaMecanica/GrupoMecanica.jpg" alt="">
-                <img src="/public/IngenieriaIndustrial/GrupoIndustrial.jpg" alt="">
+                <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/IngenieriaSistemas/GrupoSISTEMAS.jpg?raw=true" alt="">
+                <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/IngenieriaQuimica/GrupoQuimica.jpg?raw=true" alt="">
+                <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/IngenieriaMecanica/GrupoMecanica.jpg?raw=true" alt="">
+                <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/IngenieriaIndustrial/GrupoIndustrial.jpg?raw=true" alt="">
 
                 <video controls autoplay loop muted>
                     <source src="/public/Galeria/video.mp4">
                 </video>
 
-                <img src="/public/Galeria/imagen.jpg" alt="">
-                <img src="/public/Galeria/imagen_2.jpg" alt="">
-                <img src="/public/Galeria/imagen_3.jpg" alt="">
-                <img src="/public/Galeria/imagen_4.jpg" alt="">
-                <img src="/public/Galeria/imagen_5.jpg" alt="">
+                <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/Galeria/imagen.jpg?raw=true" alt="">
+                <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/Galeria/imagen_2.jpg?raw=true" alt="">
+                <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/Galeria/imagen_3.jpg?raw=true" alt="">
+                <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/Galeria/imagen_4.jpg?raw=true" alt="">
+                <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/Galeria/imagen_5.jpg?raw=true" alt="">
                 
                 <video controls autoplay loop muted>
                     <source src="/public/Galeria/video_2.mp4">
                 </video>
 
-                <img src="/public/Galeria/imagen_6.jpg" alt="">
-                <img src="/public/Galeria/imagen_7.jpg" alt="">
-                <img src="/public/Galeria/imagen_8.jpg" alt="">
-                <img src="/public/Galeria/imagen_9.jpg" alt="">
-                <img src="/public/Galeria/imagen_10.jpg" alt="">
+                <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/Galeria/imagen_6.jpg?raw=true" alt="">
+                <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/Galeria/imagen_7.jpg?raw=true" alt="">
+                <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/Galeria/imagen_8.jpg?raw=true" alt="">
+                <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/Galeria/imagen_9.jpg?raw=true" alt="">
+                <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/Galeria/imagen_10.jpg?raw=true" alt="">
 
                 <video controls autoplay loop muted>
                     <source src="/public/Galeria/video_3.mp4">
                 </video>
 
-                <img src="/public/Galeria/imagen_11.jpg" alt="">
-                <img src="/public/Galeria/imagen_12.jpg" alt="">
-                <img src="/public/Galeria/imagen_13.jpg" alt="">
-                <img src="/public/Galeria/imagen_14.jpg" alt="">
-                <img src="/public/Galeria/imagen_15.jpg" alt="">
+                <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/Galeria/imagen_11.jpg?raw=true" alt="">
+                <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/Galeria/imagen_12.jpg?raw=true" alt="">
+                <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/Galeria/imagen_13.jpg?raw=true" alt="">
+                <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/Galeria/imagen_14.jpg?raw=true" alt="">
+                <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/Galeria/imagen_15.jpg?raw=true" alt="">
 
                 <video controls autoplay loop muted>
                     <source src="/public/Galeria/video_4.mp4">
                 </video>
 
-                <img src="/public/Galeria/imagen_16.jpg" alt="">
-                <img src="/public/Galeria/imagen_17.jpg" alt="">
-                <img src="/public/Galeria/imagen_18.jpg" alt="">
-                <img src="/public/Galeria/imagen_19.jpg" alt="">
-                <img src="/public/Galeria/imagen_20.jpg" alt="">
+                <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/Galeria/imagen_16.jpg?raw=true" alt="">
+                <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/Galeria/imagen_17.jpg?raw=true" alt="">
+                <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/Galeria/imagen_18.jpg?raw=true" alt="">
+                <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/Galeria/imagen_19.jpg?raw=true" alt="">
+                <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/Galeria/imagen_20.jpg?raw=true" alt="">
 
                 <video controls autoplay loop muted>
                     <source src="/public/Galeria/video_5.mp4">
