--- a/src/pages/ambiente.astro
+++ b/src/pages/ambiente.astro
@@ -18,7 +18,7 @@ import Footer from "../layouts/Footer.astro";
 		<ContenedoresPadres>
 			<H1 title='Laguna de punta de piedras'></H1>
 			<ContenedorInformacion subtitle='' contexto='La Laguna de Punta de Piedras es un importante cuerpo de agua ubicado en la ciudad de Punta de Piedras, en el estado Nueva Esparta, Venezuela. Esta laguna es un ambiente costero cercano a un desarrollo urbano significativo en la Isla de Margarita, lo que influye en las características fisicoquímicas de sus aguas.'>
-				<img src="/public/Punta_de_Piedras_aerea.jpg" alt="">
+				<img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/Punta_de_Piedras_aerea.jpg?raw=true" alt="">
 			</ContenedorInformacion>
 		</ContenedoresPadres>
 
@@ -57,11 +57,11 @@ import Footer from "../layouts/Footer.astro";
             <H1 title='La laguna en la actualidad'></H1>
             <ContenedorInformacion subtitle='' contexto='Actualmente se a observado que la comunidad enfrenta multiples desafios relacionados con la contaminacion, la comunidad carece de infraestructuras y servicios basicos, como instalaciones academicas y centro de salud, lo que limita el acceso a recursos esenciales y afecta la calidad de vida de los habitantes. Se reportan problemas de senamiento, comom aguas negras estancadas en las calles, que representa un riesgo para la salud publica y constribuyen a la contaminacion de la laguna. Existe una necesidad urgente de aumentar la conciencia y educacion sobre la importancia de la conservacion del medio ambiente.'>
                 <Slider 
-                imagen='/public/Jpg/Contraminacion Sector.jpg' 
-                imagen2='/public/Jpg/Contraminacion2 Sector.jpg' 
-                imagen3='/public/Jpg/Contraminacion3 Sector.jpg' 
-                imagen4='/public/Jpg/Contraminacion4 Sector.jpg' 
-                imagen5='/public/Jpg/Contraminacion5 Sector.jpg'>
+                imagen='https://github.com/WalStar29/Portal-Digital/blob/main/public/Jpg/Contraminacion%20Sector.jpg?raw=true' 
+                imagen2='https://github.com/WalStar29/Portal-Digital/blob/main/public/Jpg/Contraminacion2%20Sector.jpg?raw=true' 
+                imagen3='https://github.com/WalStar29/Portal-Digital/blob/main/public/Jpg/Contraminacion3%20Sector.jpg?raw=true' 
+                imagen4='https://github.com/WalStar29/Portal-Digital/blob/main/public/Jpg/Contraminacion4%20Sector.jpg?raw=true' 
+                imagen5='https://github.com/WalStar29/Portal-Digital/blob/main/public/Jpg/Contraminacion5%20Sector.jpg?raw=true'>
                 </Slider>
             </ContenedorInformacion>
         </ContenedoresPadres>
