--- a/src/pages/proyectos.astro
+++ b/src/pages/proyectos.astro
@@ -19,8 +19,8 @@ import Footer from "../layouts/Footer.astro";
 			<H1 title='Futuros proyectos'></H1>
 			<ContenedorInformacion subtitle='' contexto='Las Instituciones Universitarias, Instituto Unicersitario Politecnico "Santiago Marino" y El Tecnologico "Antonio Jose De Sucre" EXTENSION PORLAMAR, Se toman de la mano para dirigirse al municipio tubores, Punta de Piedras para estar presente a las comunidades y sectores'>
 				<div class="LogosUniversidad">
-					<img src="/public/Png/Santiago_Marinio.png" alt="">
-					<img src="/public/Png/Antonio_jose_de_sucre.png" alt="">
+					<img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/Png/Santiago_Marinio.png?raw=true" alt="">
+					<img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/Png/Antonio_jose_de_sucre.png?raw=true" alt="">
 				</div>
 			</ContenedorInformacion>
 		</ContenedoresPadres>
@@ -29,10 +29,10 @@ import Footer from "../layouts/Footer.astro";
 		<!-- ContenedorPadre 2 -->
 		<ContenedoresPadres>
 			<ContenedorCartas>
-				<Cartas titulo='Portal Digital para la concientizacion del ambiente' contexto='Se propone el desarrollo de un Portal Digital para la conientizacion del ambiente educativo, que busque informacion y sensibilizar a la comunidad sobre el cuidado ambiental' imagen='/public/IngenieriaSistemas/GrupoSISTEMAS.jpg'></Cartas>
-				<Cartas titulo='Diseño de una Maquina Trituradora para las conchas marinas ' contexto='Se propone el diseno de una Maquina trituradora para las conchas marinas ubicado en el pase EsterGil con el objetivos de triturar para el benefios de la poblacion, en la cual se hara contriccion de bloques, edificaciones, decoraciones de relleno, entre otros ' imagen='/public/IngenieriaMecanica/GrupoMecanica.jpg'></Cartas>
-				<Cartas titulo='Diseño de una plan de seguridad integral para la terminal de ferry punta de piedras' contexto='Se propone un diseño de seguridad integral para el terminal de ferry en punta de piedras para salvaguardar la seguridad de los pasajeros y de los pertenecientes a la comunidad donde se busca un equilibrio entre una infraestructura segura y una panorámica atrayente' imagen='/public/IngenieriaIndustrial/GrupoIndustrial.jpg'></Cartas>
-				<Cartas titulo='Evaluación de la calidad del agua en la Laguna de Punta de Piedras y sus riesgos para salud en la Comunidad' contexto='Evaluar la calidad de agua y ver como afecta a las comunidades cercanas; para proponer la idea del tratamiento y poder tomar accion en la que ayuden a descontaminar y proteger la laguna de punta de piedras' imagen='/public/IngenieriaQuimica/GrupoQuimica.jpg'></Cartas>
+				<Cartas titulo='Portal Digital para la concientizacion del ambiente' contexto='Se propone el desarrollo de un Portal Digital para la conientizacion del ambiente educativo, que busque informacion y sensibilizar a la comunidad sobre el cuidado ambiental' imagen='https://github.com/WalStar29/Portal-Digital/blob/main/public/IngenieriaSistemas/GrupoSISTEMAS.jpg?raw=true'></Cartas>
+				<Cartas titulo='Diseño de una Maquina Trituradora para las conchas marinas ' contexto='Se propone el diseno de una Maquina trituradora para las conchas marinas ubicado en el pase EsterGil con el objetivos de triturar para el benefios de la poblacion, en la cual se hara contriccion de bloques, edificaciones, decoraciones de relleno, entre otros ' imagen='https://github.com/WalStar29/Portal-Digital/blob/main/public/IngenieriaMecanica/GrupoMecanica.jpg?raw=true'></Cartas>
+				<Cartas titulo='Diseño de una plan de seguridad integral para la terminal de ferry punta de piedras' contexto='Se propone un diseño de seguridad integral para el terminal de ferry en punta de piedras para salvaguardar la seguridad de los pasajeros y de los pertenecientes a la comunidad donde se busca un equilibrio entre una infraestructura segura y una panorámica atrayente' imagen='https://github.com/WalStar29/Portal-Digital/blob/main/public/IngenieriaIndustrial/GrupoIndustrial.jpg?raw=true'></Cartas>
+				<Cartas titulo='Evaluación de la calidad del agua en la Laguna de Punta de Piedras y sus riesgos para salud en la Comunidad' contexto='Evaluar la calidad de agua y ver como afecta a las comunidades cercanas; para proponer la idea del tratamiento y poder tomar accion en la que ayuden a descontaminar y proteger la laguna de punta de piedras' imagen='https://github.com/WalStar29/Portal-Digital/blob/main/public/IngenieriaQuimica/GrupoQuimica.jpg?raw=true'></Cartas>
 			</ContenedorCartas>
 		</ContenedoresPadres>
 
