prueba de video

--- a/src/pages/galeria.astro
+++ b/src/pages/galeria.astro
@@ -24,7 +24,7 @@ import Footer from "../layouts/Footer.astro";
                 <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/IngenieriaIndustrial/GrupoIndustrial.jpg?raw=true" alt="">
 
                 <video controls autoplay loop muted>
-                    <source src="/public/Galeria/video.mp4">
+                    <source src="https://drive.google.com/file/d/1bzM-Ky7UA8B0ZrzMVzdZ--FoT_Ul_A_y/view?usp=sharing">
                 </video>
 
                 <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/Galeria/imagen.jpg?raw=true" alt="">
@@ -34,7 +34,7 @@ import Footer from "../layouts/Footer.astro";
                 <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/Galeria/imagen_5.jpg?raw=true" alt="">
                 
                 <video controls autoplay loop muted>
-                    <source src="/public/Galeria/video_2.mp4">
+                    <source src="https://drive.google.com/file/d/1zyaPoTOGTwdUBLNA18xGM92qvEDfaxQB/view?usp=sharing">
                 </video>
 
                 <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/Galeria/imagen_6.jpg?raw=true" alt="">
@@ -44,7 +44,7 @@ import Footer from "../layouts/Footer.astro";
                 <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/Galeria/imagen_10.jpg?raw=true" alt="">
 
                 <video controls autoplay loop muted>
-                    <source src="/public/Galeria/video_3.mp4">
+                    <source src="https://drive.google.com/file/d/1kjhe-cZpMNkDEoAJFEC3EjBf85Ri3i_Q/view?usp=sharing">
                 </video>
 
                 <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/Galeria/imagen_11.jpg?raw=true" alt="">
@@ -54,7 +54,7 @@ import Footer from "../layouts/Footer.astro";
                 <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/Galeria/imagen_15.jpg?raw=true" alt="">
 
                 <video controls autoplay loop muted>
-                    <source src="/public/Galeria/video_4.mp4">
+                    <source src="https://drive.google.com/file/d/1YJy4JIVW9lh5MQYsIlLIcTNMwhhZgRY7/view?usp=sharing">
                 </video>
 
                 <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/Galeria/imagen_16.jpg?raw=true" alt="">
@@ -64,7 +64,7 @@ import Footer from "../layouts/Footer.astro";
                 <img src="https://github.com/WalStar29/Portal-Digital/blob/main/public/Galeria/imagen_20.jpg?raw=true" alt="">
 
                 <video controls autoplay loop muted>
-                    <source src="/public/Galeria/video_5.mp4">
+                    <source src="https://drive.google.com/file/d/1CuGpt8PwZB5hYQRxwEoBAA592NW0BI4r/view?usp=sharing">
                 </video>
             </div>
         </ContenedoresPadres>
